public/css/styles.css
/* ... */
.create-patient-field p {
  font-size: var(--text-p);
}

.create-patient-field textarea {
  height: 200px;
}

.create-patient-field-req {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.create-patient-checkbox {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: var(--text-p);
  margin-top: 15px;
}

.create-patient-checkbox label {
  margin-right: 15px;
}

.threshold-container {
  display: none;
  background-color: #b9daeb96;
  border-radius: 10px;
}

.threshold-container p {
  margin-top: 15px;
  text-align: center;
  font-size: var(--text-p);
  font-weight: 300;
}

.validator {
  color: red;
}

.info {
  display: flex;
  align-items: center;
  border-radius: 15px;
  background-color: white;
  padding: 0 0 0 5px;
  width: 500px;
  text-align: left;
}

.info-text {
  margin-left: 5px;
  font-size: 16px;
	color: var(--colour-h1);
  font-weight: 300;
}

.info img {
  width: 20px;
  height: 20px;
}

.clinician-message{
  padding: 2rem;
  font-size: 1.5em;
  color: darkblue;
}

.clinician-message-header {
  display: inline-flex;
}

.clinician-message-header-sender{
  margin-left: 200px;
  display:inline; 
  background-color:whitesmoke;
  padding: 1.5rem;
  padding-left: 2rem;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
}

.clinician-message-header-time {
  padding: 1.5rem;
  font-weight: 550;
}

.clinician-message-body{
  padding: 15px;
  min-height: 100px;
  margin-left: 200px;
  margin-right: 200px;
  border: 0px;
  border-style: groove;
  text-align: left;
  background-color: whitesmoke;
  border-top-right-radius: 25px;
  border-bottom-right-radius: 25px;
  border-bottom-left-radius: 25px;
}

.clinician-message-body h3 {
  font-weight: 600;
}

.support-message-patient-list {
  display: flex;
  flex-direction: column;
  width: 25%;
  background-color: #0a5388;
  text-align: center;
  border-radius: 25px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.message-patient-contact {
  font-size: var(--text-p);
  padding: 10px;
  cursor: pointer;
}

.message-patient-contact:hover {
  background-color: var(--colour-background-teal);
  color: rgba(1, 58, 99, 1);
}

.active-message-patient {
  background-color: var(--colour-background-teal);
  color: rgba(1, 58, 99, 1);
}

.message-patient-heading {
  font-size: var(--text-h3);
  margin: 25px 15px;
}

.support-message-main {
  width: 75%;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.current-support-message {
  margin: 25px 0px;
}

.current-support-message p {
  font-size: var(--text-p);
}

.support-message-main p {
  font-size: var(--text-p);
}

.compose-support-message input, textarea, button{
  margin-bottom: 15px;
}

.compose-support-message label {
  font-size: var(--text-p);
}

#hidden-support-msg-receiver {
  display: none;
}

.compose-support-message button {
  background-color: var(--colour-background-teal);
  color: var(--colour-h1);
}

.patient-overview-btn {
  background-color: var(--colour-background-teal);
  color: var(--colour-h1);
  margin-top: 35px;
}

.clinician-message-link, .clinician-message-link:visited{
  color: darkblue;
}

.support-message-section {
  width: 75%;
  margin-right: 12.5%;
  margin-left: 12.5%;
  background-color: var(--colour-h1);
  margin-bottom: 100px;
  border-top-left-radius: 25px;
  border-bottom-left-radius: 25px;
}

.individual-msg-section {
  margin: 50px 0px;
  color: var(--colour-h1);
}

.compose-support-message button {
  background-color: var(--colour-h1);
  color: var(--colour-background-teal);
}

.drilldown-container {
  width: 90%;
  margin-left: 5%;
  margin-right: 5%;
  margin-top: 50px;

  background-color: var(--colour-h1);
  border-radius: 25px;
}

.patient-info {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 70px;
  margin: 25px;
  width: 50%;
}

.patient-info button {
  background-color: var(--colour-background-teal);
  color: var(--colour-h1);
}

.patient-overview-details {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.patient-info img {
  width: 160px;
  height: 160px;
  margin-right: 10px;
}

.drilldown-nav-bar {
  margin-top: 25px;
}

.drilldown-nav-bar a {
  color: white;
}

.patient-info li {
  font-size: var(--text-p);
  color: white;
  font-weight: 500;
}

.active-overview-tab {
  color: white;
}

.overview-container {
  /* background-color: var(--colour-h1); */
  display: flex;
  align-items: baseline;
  gap: 10px;
  width: 90%;
  margin-left: 5%;
  margin-right: 5%;
  border-radius: 25px;
  margin-top: 2%;
  margin-bottom: 5%;
}

.data-table .patient-chart-section {
  width: 100%;
}

/* .data-table .inactive-toggle {
  color: white;
  background: none;
}

.data-table .active-toggle {
  color: var(--colour-h1);
  background-color: var(--colour-background-teal);
} */

.data-table {
  width: 75%;
  margin: 50px 0px;
}

.data-table h1 {
  font-size: var(--text-h1);
  color: var(--colour-h1);
  text-align: centre;
  font-weight: 600;
}

.patient-notes {
  background-color: var(--colour-h1);
  width: 25%;
  border-radius: 25px;
  padding: 10px;
}

.patient-notes .info {
  display: flex;
  align-items: center;
  border-radius: 15px;
  background-color: rgba(126, 126, 126, 0.575);
  padding: 0 0 0 5px;
  width: 400px;
  text-align: left;
  margin-top: 25px;
  margin-bottom: 25px;
}

.patient-notes .info-text {
  color: white;
}

.notes-table {
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
}

.notes-table h1 {
  font-size: var(--text-h2);
  text-align: center;
  font-weight: 600;
}

.note-container {
  font-size: var(--text-p);
  color: var(--colour-h1);
  background-color: #fff740;
  margin-bottom: 10px;
  min-height: 120px;
  max-height: 200px;
  padding: 15px;
  position: relative;

  /* overflow: auto; */
  display: flex;
  flex-direction: column;
}

.note-container img {
  position: absolute;
  top: 0px;
  right: 0px;
  cursor: pointer;
}

.note-container p {
  word-wrap: break-word;
  white-space: pre-wrap;
}
/* ... */

